<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:background="@color/md_theme_dark_onSecondaryContainer"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="336dp"
            android:layout_height="28dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="4dp"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/md_theme_dark_background"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/txt_work_description" />

        <TextView
            android:id="@+id/tvCod"
            android:layout_width="42dp"
            android:layout_height="28dp"
            android:layout_marginTop="4dp"
            android:text="@string/txt_work_cod"
            android:textColor="@color/md_theme_dark_background"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPrioridad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/txt_prioridad"
            android:textColor="@color/md_theme_dark_background"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvFecIni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_fec_inicio"
            android:textColor="@color/md_theme_dark_background"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>